@@ -1,4 +1,5 @@
 4.0a2
+	For urlcheck answer, cope with a trailing line not terminated by CR
 	Fix X-Greylist lossage (AIDA Shinra)
 	Fix garbled log (Bernhard Schneider)
 	Fix build on Tru64 (Attila Bruncsak)
